--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 coppa/settings.xml -text
+mfhp/settings.xml -text
 nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
 tcga/settings.xml -text
