--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 coppa/settings.xml -text
+firebird/settings.xml -text
 mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
 nciscm/ncimvn-dev-settings-qa-releases.xml -text
