--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 coppa/settings.xml -text
 firebird/settings-qa.xml -text
+firebird/settings-stage.xml -text
 firebird/settings.xml -text
 mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
