--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@ mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
 nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
+tcga-sandbox/settings.xml -text
 tcga/settings.xml -text
