--- a/.gitattributes
+++ b/.gitattributes
@@ -9,4 +9,5 @@ nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
 tcga-sandbox/settings.xml -text
 tcga/settings.xml -text
+tcgadcc/settings-stage.xml -text
 tcgadcc/settings.xml -text
