--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ mfhp/settings.xml -text
 nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
 tcga/settings.xml -text
+tcgadcc/settings.xml -text
