--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
 tcga/settings.xml -text
 tcgadcc/settings.xml -text
+template/settings.xml -text
