--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ ctd2dashboard/settings.xml -text
 firebird/settings-qa.xml -text
 firebird/settings-stage.xml -text
 firebird/settings.xml -text
+lexevs-service/settings.xml -text
 mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
 nciscm/ncimvn-dev-settings-qa-releases.xml -text
