--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+URI_Resolver/settings.xml -text
 coppa/settings.xml -text
 ctd2dashboard/settings.xml -text
 firebird/settings-qa.xml -text
