--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 URI_Resolver/settings.xml -text
 coppa/settings.xml -text
 ctd2dashboard/settings.xml -text
+dtp_sarcoma/settings.xml -text
 firebird/settings-qa.xml -text
 firebird/settings-stage.xml -text
 firebird/settings.xml -text
