--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,7 @@ dtp_sarcoma/settings.xml -text
 firebird/settings-qa.xml -text
 firebird/settings-stage.xml -text
 firebird/settings.xml -text
-greensheets/software/settings.xml -text
+greensheets/settings.xml -text
 lexevs-service/settings.xml -text
 mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
