testing whether or not gui client can delete history

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ firebird/settings-qa.xml -text
 firebird/settings-stage.xml -text
 firebird/settings.xml -text
 greensheets/settings.xml -text
+hartmanph-test/settings.xml -text
 lexevs-service/settings.xml -text
 mfhp/settings-stage.xml -text
 mfhp/settings.xml -text
