--- a/.gitattributes
+++ b/.gitattributes
@@ -14,4 +14,5 @@ nciscm/ncimvn-dev-settings-qa-releases.xml -text
 nciscm/settings.xml -text
 tcga/settings.xml -text
 tcgadcc/settings.xml -text
+template/hartmanph-test3/settings.xml -text
 template/settings.xml -text
