New folder created to test new nexus instance - for Testing purposes

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,5 @@ nciscm/settings.xml -text
 tcga/settings.xml -text
 tcgadcc/settings.xml -text
 template/settings.xml -text
+test/ncimvn-dev-settings-qa-releases.xml -text
+test/settings.xml -text
