--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,4 @@ tcgadcc/settings.xml -text
 template/settings.xml -text
 test/ncimvn-dev-settings-qa-releases.xml -text
 test/settings.xml -text
+test/settings_nciscm.xml -text
