build does not currently work.

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,5 +17,5 @@ tcga/settings.xml -text
 tcgadcc/settings.xml -text
 template/settings.xml -text
 test/ncimvn-dev-settings-qa-releases.xml -text
-test/settings.xml -text
+test/settings.xml_ctd2 -text
 test/settings_nciscm.xml -text
